--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  # Job 1: Build et tests unitaires
+  # Job 1: Build
   build:
     runs-on: ubuntu-latest
     name: Build and Unit Tests
@@ -43,12 +43,6 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --severity-threshold=high --fail-on=upgradable
-          
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: snyk.sarif
 
   # Job 3: SAST (Static Application Security Testing) avec Snyk Code
   sast-scan:
@@ -69,12 +63,7 @@ jobs:
         with:
           command: code test
           args: --severity-threshold=medium
-          
-      - name: Upload SAST results to GitHub
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: snyk.sarif
+
 
   # Job 4: Déploiement temporaire pour DAST
   deploy-for-dast:
@@ -144,38 +133,3 @@ jobs:
           target: 'http://localhost:3000'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a -d -T 60'
-          
-      - name: Upload DAST results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: zap-reports
-          path: |
-            report_html.html
-            report_json.json
-
-  # Job 6: Consolidation des résultats de sécurité
-  security-report:
-    runs-on: ubuntu-latest
-    needs: [sca-scan, sast-scan, dast-scan]
-    if: always()
-    name: Security Report Consolidation
-    
-    steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        
-      - name: Create security summary
-        run: |
-          echo "# 🔐 Security Scan Results Summary" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "## SCA (Dependencies)" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Snyk dependency scan completed" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "## SAST (Source Code)" >> $GITHUB_STEP_SUMMARY  
-          echo "✅ Snyk code analysis completed" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "## DAST (Runtime)" >> $GITHUB_STEP_SUMMARY
-          echo "✅ OWASP ZAP dynamic scan completed" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "📊 Detailed reports available in Security tab and Artifacts" >> $GITHUB_STEP_SUMMARY
