--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -35,6 +35,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Install dependencies
+        continue-on-error: true
+        run: npm install
         
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
@@ -70,7 +74,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [sca-scan, sast-scan]
     name: Deploy Application for DAST Testing
-    continue-on-error: true
     
     steps:
       - name: Checkout code
@@ -82,14 +85,12 @@ jobs:
           node-version: '20'
           
       - name: Install and start application
-        continue-on-error: true
         run: |
           npm install
           npm start &
           sleep 30
           
       - name: Wait for application to be ready
-        continue-on-error: true
         run: |
           timeout 300 bash -c 'until curl -f http://localhost:3000/health || curl -f http://localhost:3000; do sleep 5; done'
 
@@ -118,14 +119,13 @@ jobs:
           
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.12.0
-        continue-on-error: true
         with:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'http://localhost:3000'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a -d -T 15 -U zaproxy'
           
-      - name: ZAP Full Scan (si baseline réussit)
+      - name: ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.10.0
         continue-on-error: true
         with:
