--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -114,22 +114,20 @@ jobs:
         continue-on-error: true
         run: |
           npm install
-          npm start &
-          sleep 30
+          npm start
+          APP_PID=$!
+          echo "APP_PID=$APP_PID" >> $GITHUB_ENV
+          timeout 300 bash -c 'until curl -f http://localhost:3000/health || curl -f http://localhost:3000; do sleep 5;'
           
       - name: ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.12.0
-        with:
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://localhost:3000'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a -d -T 15 -U zaproxy'
-          
-      - name: ZAP Full Scan
-        uses: zaproxy/action-full-scan@v0.10.0
+        run: |
+          docker run --rm --network host \
+          ghcr.io/zaproxy/zaproxy:stable \
+          zap-baseline.py -t http://localhost:3000 -I -d
+
+      - name: Cleanup - Stop Juice Shop
+        if: always()
         continue-on-error: true
-        with:
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://localhost:3000'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a -d -T 60'
+        run: |
+          echo "🛑 Stopping Juice Shop application..."
+          kill $APP_PID 2>/dev/null || pkill -f "npm start" || echo "Application already stopped"
