--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -30,19 +30,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     name: SCA - Dependency Vulnerability Scan
-    continue-on-error: true
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        continue-on-error: true
         run: npm install
         
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
-        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -53,7 +50,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     name: SAST - Source Code Security Scan
-    continue-on-error: true
     
     steps:
       - name: Checkout code
@@ -61,7 +57,6 @@ jobs:
         
       - name: Run Snyk Code (SAST)
         uses: snyk/actions/node@master
-        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -99,7 +94,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy-for-dast
     name: DAST - Runtime Security Scan
-    continue-on-error: true
     
     steps:
       - name: Checkout code
@@ -132,5 +126,5 @@ jobs:
       - name: Cleanup - Stop Juice Shop
         if: always()
         run: |
-          echo "🛑 Stopping Juice Shop application..."
+          echo "Stopping Juice Shop application..."
           kill $APP_PID 2>/dev/null || pkill -f "npm start" || echo "Application already stopped"
